<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg_one"
    android:orientation="vertical"
    tools:context=".Dashboard">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/loadExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/load_exam"
                android:drawableLeft="@drawable/load_exam"
                android:padding="10dp"
                android:text="@string/load_exam"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/category"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/animals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/animals"
                android:drawableLeft="@drawable/animals"
                android:padding="10dp"
                android:text="@string/animals"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/law"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/law"
                android:drawableLeft="@drawable/law"
                android:padding="10dp"
                android:text="@string/law"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/gameManagement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/animal_care"
                android:drawableLeft="@drawable/animal_care"
                android:padding="10dp"
                android:text="@string/gameManagement"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/huntingMethods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/hunting_methods"
                android:drawableLeft="@drawable/hunting_methods"
                android:padding="10dp"
                android:text="@string/huntingMethods"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/guns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/guns"
                android:drawableLeft="@drawable/guns"
                android:padding="10dp"
                android:text="@string/guns"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/dogs"
                android:drawableLeft="@drawable/dogs"
                android:padding="10dp"
                android:text="@string/dogs"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/illnesses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/illnesses"
                android:drawableLeft="@drawable/illnesses"
                android:padding="10dp"
                android:text="@string/illnesses"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/helpIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help_icon" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/homeAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7588987461083278/8606880386"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>