<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finishQuiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg_one"
    android:orientation="vertical"
    tools:context=".FinishQuiz"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="@dimen/_31sdp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center_horizontal"
                android:padding="@dimen/_7sdp"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="@dimen/_19ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_success"
                android:layout_width="@dimen/_152sdp"
                android:layout_height="@dimen/_152sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:contentDescription="@string/finish"
                android:src="@drawable/satisfied" />

            <TextView
                android:id="@+id/tv_congrats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/result_success_top"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_19ssp"
                android:textStyle="bold"
                tools:text="@string/success" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/result_success_bottom"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_19ssp"
                tools:text="@string/score" />

            <Button
                android:id="@+id/toDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/border_next"
                android:paddingLeft="@dimen/_24sdp"
                android:paddingRight="@dimen/_24sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:text="@string/newTest"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>