<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/_11sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_dashIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@drawable/ic_exam"
                android:contentDescription="@string/dialogText1"
                />

            <TextView
                android:id="@+id/tv_dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/examYoungHunter"
                android:gravity="center"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/_6sdp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_continueTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/continueTest104"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/white"
                android:background="@drawable/border_next"
                android:gravity="center"
                android:padding="@dimen/_8sdp"/>

            <TextView
                android:id="@+id/tv_startNewTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loadNewTest"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/white"
                android:background="@drawable/border_next"
                android:gravity="center"
                android:padding="@dimen/_8sdp"/>
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/iv_dismiss"
        android:layout_width="@dimen/_11sdp"
        android:layout_height="@dimen/_11sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_close"
        tools:ignore="ContentDescription"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"/>

</RelativeLayout>