<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizquestions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg_one"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".QuizQuestionsDogs"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/_12sdp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_backbutton"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingRight="@dimen/_12sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:padding="@dimen/_8sdp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/ic_exam"
                    tools:ignore="ContentDescription"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_marginRight="@dimen/_6sdp"/>

                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/examYoungHunter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_16sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                >

                <TextView
                    android:id="@+id/tv_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    tools:text="ВЪПРОС"
                    android:background="@drawable/border"
                    android:padding="@dimen/_16ssp"/>

                <LinearLayout
                    android:id="@+id/ll_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_reload"
                        android:layout_width="@dimen/_38sdp"
                        android:layout_height="@dimen/_38sdp"
                        android:gravity="center"
                        android:padding="@dimen/_9sdp"
                        android:src="@drawable/ic_reload"
                        android:alpha="0.8"
                        tools:ignore="ContentDescription" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="104"
                        android:minHeight="@dimen/_38sdp"
                        android:progress="0"
                        android:indeterminate="false"
                        android:progressBackgroundTint="@color/white"
                        android:progressTint="@color/white"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:id="@+id/tv_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_11sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        tools:text="0/104"/>

                    <TextView
                        android:id="@+id/timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:paddingTop="@dimen/_11sdp"
                        android:paddingBottom="@dimen/_11sdp"
                        android:text="@string/timerText"
                        android:textStyle="bold"
                        android:fontFamily="monospace"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_31sdp"
                android:paddingStart="@dimen/_31sdp"
                android:paddingEnd="@dimen/_31sdp"
                android:paddingRight="@dimen/_31sdp">

                <TextView
                    android:id="@+id/tv_option_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center"
                    android:padding="@dimen/_11sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:background="@drawable/border"
                    tools:text="ЕДНО"/>

                <TextView
                    android:id="@+id/tv_option_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center"
                    android:padding="@dimen/_11sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:background="@drawable/border"
                    tools:text="ДВЕ"/>

                <TextView
                    android:id="@+id/tv_option_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center"
                    android:padding="@dimen/_11sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:background="@drawable/border"
                    tools:text="ТРИ"/>

                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:padding="@dimen/_11sdp"
                    android:background="@drawable/border_next"
                    android:text="@string/nextQue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>